añadido el nombre del usuario, terrible con el maldito fallo de que era null y tenia que poner el ?
